force-app/main/default/objects/hed__Course__c/hed__Course__c.object-meta.xml
<CustomObject>
    <description>Academic Course offered by a Department or School, for example, English 101 or Ancient History.</description>
    <label>Course</label>
    <nameField>
        <label>Course Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Courses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>