force-app/main/default/objects/hed__Course__c/fields/hed__Academic_Level__c.field-meta.xml
<CustomField>
    <fullName>hed__Academic_Level__c</fullName>
    <description>The grade-level, developmental level, or age-level of the Course.</description>
    <inlineHelpText>The Academic Level of the Course. For example, the Course was offered in high school.</inlineHelpText>
    <label>Academic Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-K/Preschool</fullName>
            </value>
            <value>
                <fullName>Elementary</fullName>
            </value>
            <value>
                <fullName>Middle School</fullName>
            </value>
            <value>
                <fullName>High School</fullName>
            </value>
            <value>
                <fullName>Undergraduate</fullName>
            </value>
            <value>
                <fullName>Graduate</fullName>
            </value>
            <value>
                <fullName>Doctoral</fullName>
            </value>
            <value>
                <fullName>Post-Baccalaureate Certificate</fullName>
            </value>
            <value>
                <fullName>Adult Education</fullName>
            </value>
            <value>
                <fullName>Professional Education</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>