force-app/main/default/objects/hed__Course__c/fields/hed__Description__c.field-meta.xml
<CustomField>
    <fullName>hed__Description__c</fullName>
    <description>This field has been replaced by the Extended Description field, which accomodates longer descriptions. Your admin can migrate text from the Description to the Extended Description field in EDA Settings | Courses.</description>
    <inlineHelpText>Ce champ a été remplacé par le champ Description étendue, qui accepte des descriptions plus longues. Votre administrateur peut migrer le texte du champ Description vers le champ Description étendue dans Paramètres EDA | Cours.</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>