force-app/main/default/objects/hed__Course__c/fields/hed__Extended_Description__c.field-meta.xml
<CustomField>
    <fullName>hed__Extended_Description__c</fullName>
    <description>Use this field to describe the Course, up to a maxium of 131,000 characters. This field replaces the Description field.</description>
    <inlineHelpText>Utilisez ce champ pour décrire le Cours en saisissant jusqu&apos;à 131 000 caractères. Ce champ remplace le champ Description.</inlineHelpText>
    <label>Extended Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>