force-app/main/default/objects/hed__Course__c/fields/SIS_Comments__c.field-meta.xml
<CustomField>
    <fullName>SIS_Comments__c</fullName>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>