force-app/main/default/objects/hed__Course__c/fields/SIS_Comp_tence_SDG__c.field-meta.xml
<CustomField>
    <fullName>SIS_Comp_tence_SDG__c</fullName>
    <label>Compétence SDG</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>