force-app/main/default/objects/hed__Course__c/fields/SIS_Course_code__c.field-meta.xml
<CustomField>
    <fullName>SIS_Course_code__c</fullName>
    <label>Course code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>