force-app/main/default/objects/hed__Course__c/fields/SIS_Course_Language_code__c.field-meta.xml
<CustomField>
    <fullName>SIS_Course_Language_code__c</fullName>
    <label>Language code</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AL</fullName>
            </value>
            <value>
                <fullName>AM</fullName>
            </value>
            <value>
                <fullName>AN</fullName>
            </value>
            <value>
                <fullName>AR</fullName>
            </value>
            <value>
                <fullName>AT</fullName>
            </value>
            <value>
                <fullName>CH</fullName>
            </value>
            <value>
                <fullName>ES</fullName>
            </value>
            <value>
                <fullName>FR</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>JP</fullName>
            </value>
            <value>
                <fullName>PO</fullName>
            </value>
            <value>
                <fullName>RU</fullName>
            </value>
            <value>
                <fullName>XX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>