force-app/main/default/objects/hed__Course__c/fields/SIS_Date__c.field-meta.xml
<CustomField>
    <fullName>SIS_Date__c</fullName>
    <label>Date</label>
    <type>Date</type>
</CustomField>