force-app/main/default/objects/hed__Course__c/fields/SIS_Description__c.field-meta.xml
<CustomField>
    <fullName>SIS_Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>