force-app/main/default/objects/hed__Course__c/fields/SIS_Discipline__c.field-meta.xml
<CustomField>
    <fullName>SIS_Discipline__c</fullName>
    <label>Discipline</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>