force-app/main/default/objects/hed__Course__c/fields/SIS_Early_maker_competence__c.field-meta.xml
<CustomField>
    <fullName>SIS_Early_maker_competence__c</fullName>
    <label>Early maker competence</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>