force-app/main/default/objects/hed__Course__c/fields/SIS_Level__c.field-meta.xml
<CustomField>
    <fullName>SIS_Level__c</fullName>
    <label>Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
                <isActive>false</isActive>
                <label>4</label>
            </value>
            <value>
                <fullName>Cours Carrière</fullName>
                <isActive>false</isActive>
                <label>Cours Carrière</label>
            </value>
            <value>
                <fullName>Cours de langue</fullName>
                <isActive>false</isActive>
                <label>Cours de langue</label>
            </value>
            <value>
                <fullName>Cours de management</fullName>
                <isActive>false</isActive>
                <label>Cours de management</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>