force-app/main/default/objects/hed__Course__c/fields/SIS_Nature_product_code__c.field-meta.xml
<CustomField>
    <fullName>SIS_Nature_product_code__c</fullName>
    <label>Nature product code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>