force-app/main/default/objects/hed__Course__c/fields/SIS_Pedagogical_Category_code__c.field-meta.xml
<CustomField>
    <fullName>SIS_Pedagogical_Category_code__c</fullName>
    <inlineHelpText>Spécial Cursus</inlineHelpText>
    <label>Pedagogical Category code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SIS_Pedagogical_Code</valueSetName>
    </valueSet>
</CustomField>