force-app/main/default/objects/hed__Course__c/fields/SIS_Prerequisites__c.field-meta.xml
<CustomField>
    <fullName>SIS_Prerequisites__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prerequisites</label>
    <type>Checkbox</type>
</CustomField>