force-app/main/default/objects/hed__Course__c/fields/SIS_Referent_code__c.field-meta.xml
<CustomField>
    <fullName>SIS_Referent_code__c</fullName>
    <label>Referent code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>