force-app/main/default/objects/hed__Course__c/fields/SIS_Syllabus_required__c.field-meta.xml
<CustomField>
    <fullName>SIS_Syllabus_required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Syllabus required</label>
    <type>Checkbox</type>
</CustomField>